--- a/.coveragerc
+++ b/.coveragerc
@@ -55,7 +55,9 @@ omit =
     homeassistant/components/apple_tv/__init__.py
     homeassistant/components/apple_tv/media_player.py
     homeassistant/components/apple_tv/remote.py
-    homeassistant/components/aqualogic/*
+    homeassistant/components/aqualogic/__init__.py
+    homeassistant/components/aqualogic/sensor.py
+    homeassistant/components/aqualogic/switch.py
     homeassistant/components/aquostv/media_player.py
     homeassistant/components/arcam_fmj/media_player.py
     homeassistant/components/arcam_fmj/__init__.py
