--- a/homeassistant/components/aqualogic/manifest.json
+++ b/homeassistant/components/aqualogic/manifest.json
@@ -3,5 +3,6 @@
   "name": "AquaLogic",
   "documentation": "https://www.home-assistant.io/integrations/aqualogic",
   "requirements": ["aqualogic==2.5"],
-  "codeowners": []
+  "codeowners": [],
+  "config_flow": true
 }
